2006-12-29  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/muxers/flv/flv.xml: Components have to
	have unique names...
